Forward BrowserView::CutCopyPaste to the NSApp

http://crbug.com/773565 removed accelerators for textfields, breaking
Cut, Copy, and Paste in the Chrome Menu. This fix forwards those
calls to NSApp.

BUG=788262

Change-Id: I70adfe270dd672961ca04bc0e4a9ab498e7f2944
Reviewed-on: https://chromium-review.googlesource.com/984346
Commit-Queue: Robert Liao <robliao@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546712}